Some rudimentary tests.

--- a/mopidy_mqtt/ext.conf
+++ b/mopidy_mqtt/ext.conf
@@ -1,7 +1,7 @@
-[mqtthook]
+[mqtt]
 enabled = true
-mqtthost = 127.0.0.1
-mqttport = 1883
+host = 127.0.0.1
+port = 1883
 topic = mopidy
-username = 
-password = 
+username =
+password =
