--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,20 @@ python:
 virtualenv:
   system_site_packages: true
 
+addons:
+  apt:
+    packages:
+      - gir1.2-gst-plugins-base-1.0
+      - gir1.2-gstreamer-1.0
+      - python-gst-1.0
+
 env:
+  - TOX_ENV=py27
   - TOX_ENV=flake8
 
 install:
-  - "pip install tox"
+  - pip install tox
 
 script:
-  - "tox -e $TOX_ENV"
+  - tox -e $TOX_ENV
 
