--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,15 @@
 [tox]
-envlist = flake8
+envlist = py27, flake8
+
+[testenv]
+sitepackages = true
+
+deps =
+    https://github.com/mopidy/mopidy/archive/develop.zip
+    pytest
+
+commands =
+    py.test --basetemp={envtmpdir} {posargs}
 
 
 [testenv:flake8]
@@ -7,5 +17,5 @@ skip_install = true
 deps =
     flake8
     
-commands = flake8 mopidy_mqtt setup.py
+commands = flake8 mopidy_mqtt setup.py tests/
 
