--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,19 @@
-dist: xenial
+dist: bionic
 language: python
 
 python:
-  - "2.7"
-
-virtualenv:
-  system_site_packages: true
+  - "3.7"
 
 addons:
   apt:
     packages:
       - gir1.2-gst-plugins-base-1.0
       - gir1.2-gstreamer-1.0
-      - python-gst-1.0
-
-env:
-  - TOX_ENV=py27
-  - TOX_ENV=flake8
+      - python3-gst-1.0
 
 install:
   - pip install tox
 
 script:
-  - tox -e $TOX_ENV
+  - tox -r
 
