--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27, flake8
+envlist = py37, flake8
 
 [testenv]
 sitepackages = true
@@ -7,6 +7,8 @@ sitepackages = true
 deps =
     https://github.com/mopidy/mopidy/archive/develop.zip
     pytest
+    vext
+    vext.gi
 
 commands =
     py.test --basetemp={envtmpdir} {posargs}
@@ -16,6 +18,6 @@ commands =
 skip_install = true
 deps =
     flake8
-    
+
 commands = flake8 mopidy_mqtt setup.py tests/
 
